--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": [
       "ESNext"
     ],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "outDir": "dist",
     "strict": true,
     "noImplicitAny": true,
@@ -32,14 +32,33 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "exactOptionalPropertyTypes": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@application/*": [
+        "src/application/*"
+      ],
+      "@core/*": [
+        "src/core/*"
+      ],
+      "@infrastructure/*": [
+        "src/infrastructure/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ],
+      "@tests/*": [
+        "tests/*"
+      ]
+    }
   },
   "include": [
     "src",
+    "tests"
   ],
   "exclude": [
     "node_modules",
     "dist",
     "example",
-    "tests",
   ]
 }
