--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "commander": "^13.1.0",
-    "consola": "^3.4.2"
+    "consola": "^3.4.2",
+    "zod": "^3.25.76"
   }
 }
