--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
     "tb": "bin/tb"
   },
   "scripts": {
-    "tb": "ts-node ./src/index.ts",
-    "test": "vitest",
-    "build": "npm run clean:some && tsc -p .",
-    "clean:some": "rimraf ./dist",
-    "clean:all": "rimraf ./node_modules ./pnpm-lock.yaml ./dist",
-    "refresh": "npm run clean:all && npm install"
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "keywords": [
     "cli",
@@ -23,13 +18,13 @@
   "license": "MIT",
   "packageManager": "pnpm@10.7.0",
   "devDependencies": {
-    "@types/fs-extra": "^11.0.4",
+    "@types/minimatch": "^5.1.2",
     "@types/node": "^22.14.0",
     "memfs": "^4.17.2",
-    "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3"
@@ -37,6 +32,9 @@
   "dependencies": {
     "commander": "^13.1.0",
     "consola": "^3.4.2",
+    "minimatch": "^10.0.3",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0",
     "zod": "^3.25.76"
   }
 }
