--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "exactOptionalPropertyTypes": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
       "@application/*": [
         "src/application/*"
@@ -47,7 +49,7 @@
       ],
       "@tests/*": [
         "tests/*"
-      ],
+      ]
     }
   },
   "include": [
