feat: implement new core architecture
WIP: Massive changes in progress 2 (BROKEN STATE) | refactor TemplateRepository & add Transaction pattern & other

WIP: Massive changes in progress 3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,19 +46,16 @@
       ],
       "@shared/*": [
         "src/shared/*"
-      ],
-      "@tests/*": [
-        "tests/*"
       ]
     }
   },
   "include": [
-    "src",
-    "tests"
+    "src"
   ],
   "exclude": [
     "node_modules",
     "dist",
     "example",
+    "**/*.test.ts"
   ]
 }
