--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,8 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 80,
-  "tabWidth": 2
+  "arrowParens": "avoid",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false
 }
