--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tb": "bin/tb"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "test": "vitest"
   },
   "keywords": [
     "cli",
@@ -18,6 +19,8 @@
   "license": "MIT",
   "packageManager": "pnpm@10.7.0",
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/glob-parent": "^5.1.3",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22.14.0",
     "memfs": "^4.17.2",
@@ -32,7 +35,12 @@
   "dependencies": {
     "commander": "^13.1.0",
     "consola": "^3.4.2",
+    "fast-glob": "^3.3.3",
+    "fs-extra": "^11.3.1",
+    "glob-parent": "^6.0.2",
     "minimatch": "^10.0.3",
+    "ora": "^8.2.0",
+    "p-limit": "^6.2.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
     "zod": "^3.25.76"
