--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tbox",
-  "version": "0.0.1",
+  "version": "0.0.1-next.0",
   "description": "CLI tool for managing file/directory templates",
   "main": "./dist/index.mjs",
   "type": "module",
   "bin": {
     "tbox": "bin/tbox"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "npm run type-check && npm run build-tsup",
     "build-tsup": "tsup",
