--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "tbox",
-  "version": "0.0.1-next.0",
-  "description": "CLI tool for managing file/directory templates",
-  "main": "./dist/index.mjs",
-  "type": "module",
-  "bin": {
-    "tbox": "bin/tbox"
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "npm run type-check && npm run build-tsup",
-    "build-tsup": "tsup",
-    "type-check": "tsc --noEmit --project tsconfig.src.json",
-    "test:unit": "vitest run --dir __tests__/unit",
-    "test:integration": "vitest run --dir __tests__/integration",
-  },
-  "keywords": [
-    "cli",
-    "templates"
-  ],
-  "author": "Alexander Larin",
-  "license": "MIT",
-  "packageManager": "pnpm@10.7.0",
-  "devDependencies": {
-    "@types/glob-parent": "^5.1.3",
-    "@types/minimatch": "^5.1.2",
-    "@types/node": "^22.14.0",
-    "eslint": "^9.36.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.6",
-    "memfs": "^4.17.2",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.16",
-    "tslib": "^2.8.1",
-    "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.3"
-  },
-  "dependencies": {
-    "commander": "^13.1.0",
-    "consola": "^3.4.2",
-    "fast-glob": "^3.3.3",
-    "glob-parent": "^6.0.2",
-    "minimatch": "^10.0.3",
-    "ora": "^8.2.0",
-    "p-limit": "^6.2.0",
-    "reflect-metadata": "^0.2.2",
-    "tsyringe": "^4.10.0",
-    "zod": "^3.25.76"
-  }
+    "name": "tbox",
+    "version": "0.0.1-next.0",
+    "description": "CLI tool for managing file/directory templates",
+    "main": "./dist/index.mjs",
+    "type": "module",
+    "bin": {
+        "tbox": "bin/tbox"
+    },
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "npm run type-check && npm run build-tsup",
+        "build-tsup": "tsup",
+        "prepublishOnly": "npm run build",
+        "type-check": "tsc --noEmit --project tsconfig.src.json",
+        "test:unit": "vitest run --dir __tests__/unit",
+        "test:integration": "vitest run --dir __tests__/integration"
+    },
+    "keywords": [
+        "cli",
+        "templates"
+    ],
+    "author": "Alexander Larin",
+    "license": "MIT",
+    "packageManager": "pnpm@10.7.0",
+    "devDependencies": {
+        "@types/glob-parent": "^5.1.3",
+        "@types/minimatch": "^5.1.2",
+        "@types/node": "^22.14.0",
+        "eslint": "^9.36.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.6",
+        "memfs": "^4.17.2",
+        "prettier": "^3.6.2",
+        "rimraf": "^6.0.1",
+        "ts-node": "^10.9.2",
+        "tsc-alias": "^1.8.16",
+        "tslib": "^2.8.1",
+        "tsup": "^8.5.0",
+        "typescript": "^5.8.3",
+        "vitest": "^3.1.3"
+    },
+    "dependencies": {
+        "commander": "^13.1.0",
+        "consola": "^3.4.2",
+        "fast-glob": "^3.3.3",
+        "glob-parent": "^6.0.2",
+        "minimatch": "^10.0.3",
+        "ora": "^8.2.0",
+        "p-limit": "^6.2.0",
+        "reflect-metadata": "^0.2.2",
+        "tsyringe": "^4.10.0",
+        "zod": "^3.25.76"
+    }
 }
