build: add bin to files list

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "tbox": "bin/tbox"
     },
     "files": [
-        "dist"
+        "dist",
+        "bin"
     ],
     "scripts": {
         "build": "npm run type-check && npm run build-tsup",
