build: add scope to project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tbox",
+    "name": "@alexlar/tbox",
     "version": "0.0.1-next.0",
     "description": "CLI tool for managing file/directory templates",
     "main": "./dist/index.mjs",
