--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "bin"
     ],
     "scripts": {
-        "build": "npm run type-check && npm run build-tsup",
+        "build": "npm run type-check && npm run build:tsup",
         "build:tsup": "tsup",
         "prepublishOnly": "npm run build",
         "type-check": "tsc --noEmit --project tsconfig.src.json",
